--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "async-retry": "1.3.3",
     "dotenv": "16.4.7",
     "dotenv-expand": "12.0.1",
-    "next": "15.2.2",
+    "next": "15.2.3",
     "node-pg-migrate": "7.9.1",
     "pg": "8.14.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "swr": "2.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "19.8.0",
@@ -39,8 +40,8 @@
     "concurrently": "9.1.2",
     "cz-conventional-changelog": "3.3.0",
     "dotenv-cli": "8.0.0",
-    "eslint": "9.22.0",
-    "eslint-config-next": "15.2.2",
+    "eslint": "9.23.0",
+    "eslint-config-next": "15.2.3",
     "eslint-config-prettier": "10.1.1",
     "eslint-plugin-jest": "28.11.0",
     "husky": "9.1.7",
